fix flicker

--- a/src/components/buttons/buttons.css
+++ b/src/components/buttons/buttons.css
@@ -2,7 +2,7 @@
   font-size: 1.5rem;
   cursor: pointer;
   color:var(--light);
-  transition: 0.5s;
+  transition: color 0.5s;
 }
 
 .button:hover{
