--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -30,3 +30,7 @@ nav li {
 li:first-child {
   margin-right: auto;
 }
+
+.navitem {
+  transition: color;
+}
